# ebay-scraper

./: .gitignore
csv_importer/: auction_template.csv  csv-importer.py  profile_template.csv
ebay_scraper/: README.md  api_notes.txt  ebay_scraper.py  main.py  notes  pyproject.toml  scraper.py  todo.txt
ebay_scraper/ebay_scraper/: db_interface.py  ebay_scraper.py  main.py  scraper.py
ebay_scraper/tests/: test_ebay_scraper.py
estore_scraper/: pyproject.toml  spec.txt
estore_scraper/estore_scraper/: ebay_scraper.py  main.py
estore_scraper/tests/: test_estore_scraper.py
jbidwatcher_importer/: generate.txt  jbidwatcher_importer.py  todo.txt
