[tool.poetry]
name = "estore_scraper"
version = "0.1.0"
description = ""
authors = ["Edd Salkield <edd@salkield.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.2.1"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
estore = 'estore_scraper.main:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

